--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <title>
+        Jae Song
+    </title>
+    <body>
+        <nav>
+            <a href="/">HOME</a>
+            <a href="/resume">RESUME</a>
+            <a href="/about">ABOUT</a>
+            <a href="/projects">PROJECTS</a>
+        </nav>
+    </body>
+</html>
