--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <title>
-        Jae Song
-    </title>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+        <title>
+            Jae Song
+        </title>
+    </head>
     <body>
+        <h1>Jae Song</h1>
         <nav>
             <a href="/">HOME</a>
             <a href="/resume">RESUME</a>
