--- a/index.html
+++ b/index.html
@@ -11,8 +11,36 @@
         <nav>
             <a href="/">HOME</a>
             <a href="/resume">RESUME</a>
-            <a href="/about">ABOUT</a>
-            <a href="/projects">PROJECTS</a>
+            <a href="/demos">DEMOS</a>
+            <a href="/contact">CONTACT</a>
         </nav>
+        <div class="about">
+            <ul>
+                <li>An aspiring Computer Science student</li>
+                <li>Born September 16, 1995 in Seoul, South Korea</li>
+                <li>Resides at Folsom, CA</li>
+                <li>Big fan of football (Go Rams!)</li>
+            </ul>
+        </div>
+        <div class="education">
+            <ul>
+                <li>Currently Enrolled at University of California, San Diego</li>
+                <li>Expected to graduate June/2018 with BS Computer Science</li>
+                <li>GPA: 3.79<sub>Major GPA: 4.00</sub></li>
+            </ul>
+        </div>
+        <div class="experience">
+            <ul>
+                <li>OSIsoft</li>
+                <li>Altum</li>
+                <li>Idmloco</li>
+            </ul>
+        </div>
+        <div class="projects">
+            <ul>
+                <li>league</li>
+                <li></li>
+            </ul>
+        </div>
     </body>
 </html>
