added new details

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
                 <li>Born September 16, 1995 in Seoul, South Korea</li>
                 <li>Resides at Folsom, CA</li>
                 <li>Big fan of football (Go Rams!)</li>
+                <li>Worshiper of Kendrick Lamar</li>
+                <li>Played football for 5 years (cornerback)</li>
+                <li>Marth main (forward smash FTW)</li>
+                <li>Support/ADC main (D5)</li>
             </ul>
         </div>
         <div class="education">
