--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li>Big fan of football (Go Rams!)</li>
                 <li>Worshiper of Kendrick Lamar</li>
                 <li>Played football for 5 years (cornerback)</li>
-                <li>Marth main (forward smash FTW)</li>
+                <li>Marth main (forward smash )</li>
                 <li>Support/ADC main (D5)</li>
             </ul>
         </div>
@@ -30,7 +30,7 @@
             <ul>
                 <li>Currently Enrolled at University of California, San Diego</li>
                 <li>Expected to graduate June/2018 with BS Computer Science</li>
-                <li>GPA: 3.79<sub>Major GPA: 4.00</sub></li>
+                <li>GPA: 3.79<pre><sub> Major GPA: 4.00</sub></pre></li>
             </ul>
         </div>
         <div class="experience">
