--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             <ul>
                 <li>Currently Enrolled at University of California, San Diego</li>
                 <li>Expected to graduate June/2018 with BS Computer Science</li>
-                <li>GPA: 3.79<pre><sub> Major GPA: 4.00</sub></pre></li>
+                <li>GPA: 3.79</li>
+                <li class="sub">Major GPA: 4.00<li>
             </ul>
         </div>
         <div class="experience">
