minor changes to list

--- a/index.html
+++ b/index.html
@@ -19,19 +19,13 @@
                 <li>An aspiring Computer Science student</li>
                 <li>Born September 16, 1995 in Seoul, South Korea</li>
                 <li>Resides at Folsom, CA</li>
-                <li>Big fan of football (Go Rams!)</li>
-                <li>Worshiper of Kendrick Lamar</li>
-                <li>Played football for 5 years (cornerback)</li>
-                <li>Marth main (forward smash )</li>
-                <li>Support/ADC main (D5)</li>
             </ul>
         </div>
         <div class="education">
             <ul>
                 <li>Currently Enrolled at University of California, San Diego</li>
                 <li>Expected to graduate June/2018 with BS Computer Science</li>
-                <li>GPA: 3.79</li>
-                <li class="sub">Major GPA: 4.00<li>
+                <li>GPA: 3.79 (Major GPA: 4.00)</li>
             </ul>
         </div>
         <div class="experience">
@@ -43,8 +37,9 @@
         </div>
         <div class="projects">
             <ul>
+                <li>Ad Dashboard</li>
+                <li>YouTube Geographical Analytics</li>
                 <li>league</li>
-                <li></li>
             </ul>
         </div>
     </body>
